--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^14.0.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.3.1",
+    "react-18-image-lightbox": "^5.1.4",
     "react-dom": "^18.3.1",
     "typescript": "^5.3.3"
   },
